# backend/openapi.json
@@ -620,6 +620,17 @@
       },
       "ImageOut": {
         "properties": {
+          "full_url": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Full Url"
+          },
           "id": {
             "title": "Id",
             "type": "integer"
@@ -631,6 +642,17 @@
           "position": {
             "title": "Position",
             "type": "integer"
+          },
+          "thumb_url": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Thumb Url"
           },
           "url": {
             "title": "Url",
